fix: change portfolio navigation on small phones to fix bug

--- a/style.css
+++ b/style.css
@@ -1329,7 +1329,7 @@ footer .container {
   }
 
   .portfolio-nav-element + .portfolio-nav-element {
-    margin-left: 7px;
+    margin-left: 6px;
   }
 
   .portfolio-grid {
